# songbook

./: Makefile  README.md  docker-compose.yml
backend/: .env.example  Insomnia_2022-08-27.json  go.mod  prod.Dockerfile
backend/cmd/tasteit/: main.go
backend/internal/api/: server.go
backend/internal/common/: envVars.go  errors.go  responses.go
backend/internal/db/: orm.go
backend/internal/models/: DetailedRecipeBookJson.go  DetailedSongBookJson.go  DetailedSongJson.go  EditRecipeBookJson.go  EditRecipeJson.go  EditSongBookJson.go  EditSongJson.go  NewRecipeBookJson.go  NewSongJson.go  OwnerJson.go  SongJson.go  TagJson.go
backend/internal/process/: createRecipeBookProcess.go  createRecipeProcess.go  createSongBookProcess.go  createSongProcess.go  createTagProcess.go  deleteRecipeBookProcess.go  deleteRecipeProcess.go  deleteSongProcess.go  deleteTagProcess.go  editRecipeBookProcess.go  editRecipeProcess.go  editSongBookProcess.go  editSongProcess.go  editTagProcess.go  getAuthorsProcess.go  getOrCreateUserProcess.go  getOwnerProcess.go  getRecipeBookProcess.go  getRecipeBooksProcess.go  getRecipeProcess.go  getRecipesProcess.go  getSongBookProcess.go  getSongBooksProcess.go  getSongProcess.go  getSongsProcess.go  getTagsProcess.go  getUserProcess.go  imageUploadProcess.go
backend/internal/validation/: ValidateRecipe.go  (+3 more)
frontend/: package.json
migrator/: .env.example  Cargo.toml  data.json
migrator/src/: config.rs  db.rs  db_commands.rs  json_types.rs  main.rs
mock_data/: db_dump.sql  dump.sql  gammaClient.sql  mockUser.sql  mockdata.sql
(+95 files in other folders)
