[package]
name = "songbook-migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [
    "runtime-async-std-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "offline",
] }
rand = "0.8.4"
tokio = { version = "1.20", features = ["full"] }
dotenv = "0.15"
